<resources>
    <string name="app_name">Breaking news</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="published">Published</string>
    <string name="detail">Detail</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="search_only_thai_news">Search only Thai news</string>
</resources>