<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/generalFragment"
        android:icon="@drawable/ic_general"
        android:title="@string/general" />

    <item
        android:id="@+id/businessFragment"
        android:icon="@drawable/ic_business"
        android:title="@string/business" />

    <item
        android:id="@+id/entertainmentFragment"
        android:icon="@drawable/ic_entertainment"
        android:title="@string/entertainment" />

    <item
        android:id="@+id/healthFragment"
        android:icon="@drawable/ic_health"
        android:title="@string/health" />

    <item
        android:id="@+id/scienceFragment"
        android:icon="@drawable/ic_science"
        android:title="@string/science" />

    <item
        android:id="@+id/sportsFragment"
        android:icon="@drawable/ic_sports"
        android:title="@string/sports" />

    <item
        android:id="@+id/technologyFragment"
        android:icon="@drawable/ic_technology"
        android:title="@string/technology" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/setting" />

</menu>
