<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/generalFragment">

    <fragment
        android:id="@+id/generalFragment"
        android:name="com.adedom.breakingnews.presentation.general.GeneralFragment"
        android:label="@string/general"
        tools:layout="@layout/fragment_general" >
        <action
            android:id="@+id/action_generalFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/businessFragment"
        android:name="com.adedom.breakingnews.presentation.business.BusinessFragment"
        android:label="@string/business"
        tools:layout="@layout/fragment_business" />
    <fragment
        android:id="@+id/entertainmentFragment"
        android:name="com.adedom.breakingnews.presentation.entertainment.EntertainmentFragment"
        android:label="@string/entertainment"
        tools:layout="@layout/fragment_entertainment" />
    <fragment
        android:id="@+id/healthFragment"
        android:name="com.adedom.breakingnews.presentation.health.HealthFragment"
        android:label="@string/health"
        tools:layout="@layout/fragment_health" />
    <fragment
        android:id="@+id/scienceFragment"
        android:name="com.adedom.breakingnews.presentation.science.ScienceFragment"
        android:label="@string/science"
        tools:layout="@layout/fragment_science" />
    <fragment
        android:id="@+id/sportsFragment"
        android:name="com.adedom.breakingnews.presentation.sports.SportsFragment"
        android:label="@string/sports"
        tools:layout="@layout/fragment_sports" />
    <fragment
        android:id="@+id/technologyFragment"
        android:name="com.adedom.breakingnews.presentation.technology.TechnologyFragment"
        android:label="@string/technology"
        tools:layout="@layout/fragment_technology" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.adedom.breakingnews.presentation.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="detail"
            app:argType="com.adedom.breakingnews.presentation.model.DetailModel" />
    </fragment>
</navigation>
